Add Module for Publications in Panel Admin and Frontend Succesfull

--- a/public/assets/themes/procyon/css/styles.css
+++ b/public/assets/themes/procyon/css/styles.css
@@ -8933,6 +8933,81 @@ h1, h2, h3, h4, h5,
   .ftco-hireme p {
     color: rgba(255, 255, 255, 0.9); }
 
+.publication {
+  width: 100%;
+  height: 350px;
+  margin-bottom: 0;
+  position: relative;
+  z-index: 0; }
+    .publication.img-2 {
+      height: 600px; }
+      @media (max-width: 767.98px) {
+        .publication.img-2 {
+          height: 285px; } }
+        .publication.img-2 .text {
+          max-width: 45%;
+          z-index: 1; }
+          .publication.img-2 .text h3 {
+            font-size: 22px; }
+          .publication.img-2 .text h3 a {
+            color: #fff; }
+          .publication.img-2 .text span {
+            color: rgba(255, 255, 255, 0.8);
+            text-transform: uppercase;
+            letter-spacing: 2px; }
+          @media (max-width: 767.98px) {
+          .publication.img-2 .text {
+            max-width: 100%;
+            opacity: 1; }
+            .publication.img-2 .text span {
+              color: rgba(255, 255, 255, 0.8); } }
+    .publication .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      content: '';
+      opacity: 0;
+      background: var(--z-accent-color);
+      z-index: -1;
+      -moz-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      -webkit-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+      @media (max-width: 767.98px) {
+      .publication .overlay {
+        opacity: .2; } }
+      .publication .text {
+        max-width: 80%;
+        z-index: 1;
+        opacity: 0;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        -webkit-transition: all 0.3s ease;
+        -ms-transition: all 0.3s ease;
+        transition: all 0.3s ease; }
+      .publication .text h3 {
+        font-size: 20px; }
+      .publication .text h3 a {
+        color: #fff; }
+      .publication .text span {
+        color: rgba(255, 255, 255, 0.8);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 12px;
+        font-weight: 600; }
+        @media (max-width: 767.98px) {
+      .publication .text {
+        opacity: 1; }
+      .publication .text span {
+        color: rgba(255, 255, 255, 0.8); } }
+      .publication:hover .overlay, .publication:focus .overlay {
+        opacity: .9; }
+      .publication:hover .text, .publication:focus .text {
+        opacity: 1; }    
+
 .project {
   width: 100%;
   height: 350px;
